[package]
name = "bitrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
rayon = "1.8"
sled = "0.34"
xxhash-rust = { version = "0.8.7", features = ["xxh3", "const_xxh3"] }
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
scopeguard = "1.2"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
inquire = "0.6"
